Add feature show foods

--- a/android_fastfood_app/app/src/main/res/layout/activity_home.xml
+++ b/android_fastfood_app/app/src/main/res/layout/activity_home.xml
@@ -94,6 +94,7 @@
                 android:textColor="@android:color/black"
                 android:layout_alignParentStart="true"/>
             <TextView
+                android:id="@+id/tv_see_more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Xem thêm >>>"
