--- a/android_fastfood_app/app/src/main/res/layout/activity_cart.xml
+++ b/android_fastfood_app/app/src/main/res/layout/activity_cart.xml
@@ -12,7 +12,8 @@
         android:id="@+id/app_bar_cart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#D32F2F">
+        android:background="#D32F2F"
+        android:paddingTop="46dp">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar_cart"
