--- a/android_fastfood_app/app/src/main/res/values/colors.xml
+++ b/android_fastfood_app/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Màu sắc cho ứng dụng -->
+    <color name="brand_red">#D32F2F</color>
+    <color name="button_yellow">#FFB300</color>
+    <color name="text_color_primary">#212121</color>
+    <color name="text_color_secondary">#757575</color>
 </resources>
