--- a/android_fastfood_app/app/src/main/res/layout/activity_login.xml
+++ b/android_fastfood_app/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- activity_login.xml -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -119,6 +119,30 @@
             android:textColor="@color/text_color_primary"
             android:textSize="18sp" />
 
+        <!-- Quên mật khẩu -->
+        <LinearLayout
+            android:id="@+id/ll_go_to_forgot_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Bạn quên mật khẩu? " />
+
+            <TextView
+                android:id="@+id/tv_quen_mat_khau"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quên mật khẩu"
+                android:textStyle="bold"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+        <!-- Đăng ký -->
         <LinearLayout
             android:id="@+id/ll_go_to_register"
             android:layout_width="match_parent"
