--- a/android_fastfood_app/app/src/main/res/layout/activity_register.xml
+++ b/android_fastfood_app/app/src/main/res/layout/activity_register.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- activity_register.xml -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -41,8 +41,8 @@
     <!-- Khung trắng nội dung -->
     <LinearLayout
         android:id="@+id/bottom_sheet"
-        android:layout_width="421dp"
-        android:layout_height="503dp"
+        android:layout_width="428dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/bottom_sheet_background"
@@ -50,7 +50,7 @@
         android:orientation="vertical"
         android:paddingTop="32dp"
         android:paddingBottom="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_background"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -69,7 +69,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="-24dp"
             android:text="Đăng Ký"
-            android:textColor="@color/text_color_secondary"
+            android:textColor="@color/brand_red"
             android:textSize="28sp"
             android:textStyle="bold" />
 
@@ -140,6 +140,7 @@
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- ✅ Đổi màu nút Đăng Ký thành màu đỏ -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_register_submit"
             android:layout_width="match_parent"
@@ -147,12 +148,13 @@
             android:layout_marginStart="48dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="48dp"
-            android:background="@drawable/button_background_white"
+            android:backgroundTint="@color/brand_red"
             android:text="Đăng Ký"
             android:textAllCaps="false"
-            android:textColor="@color/text_color_primary"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
+        <!-- Đăng nhập -->
         <LinearLayout
             android:id="@+id/ll_go_to_login"
             android:layout_width="match_parent"
@@ -173,5 +175,6 @@
                 android:textColor="@color/brand_red"
                 android:textStyle="bold" />
         </LinearLayout>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
