--- a/android_fastfood_app/app/src/main/res/layout/item_order_history.xml
+++ b/android_fastfood_app/app/src/main/res/layout/item_order_history.xml
@@ -62,10 +62,10 @@
             android:textSize="14sp"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:layout_width="367dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_cancel_info"
@@ -73,20 +73,20 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Xem chi tiết đơn hàng"
-                android:textSize="12sp"
-                android:textColor="#0066CC"/>
+                android:textColor="#0066CC"
+                android:textSize="12sp" />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <Button
                 android:id="@+id/btn_details"
-                android:layout_width="60dp"
-                android:layout_height="24dp"
-                android:text="Đặt lại"
-                android:textSize="12sp"
+                android:layout_width="58dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
                 android:backgroundTint="#E53935"
-                android:textColor="@android:color/white"
-                android:padding="2dp"
                 android:gravity="center"
-                android:layout_marginStart="8dp"/>
+                android:padding="2dp"
+                android:text="Đặt lại"
+                android:textColor="@android:color/white"
+                android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
