--- a/android_fastfood_app/app/src/main/res/values/themes.xml
+++ b/android_fastfood_app/app/src/main/res/values/themes.xml
@@ -2,8 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Fastfood_app" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/primary</item>
-        <item name="android:windowLightStatusBar" >true</item>
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.Fastfood_app" parent="Base.Theme.Fastfood_app" />
