--- a/android_fastfood_app/app/src/main/res/layout/activity_login.xml
+++ b/android_fastfood_app/app/src/main/res/layout/activity_login.xml
@@ -104,6 +104,16 @@
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <CheckBox
+            android:id="@+id/cb_remember_me"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="48dp"
+            android:layout_marginEnd="48dp"
+            android:layout_marginTop="8dp"
+            android:text="Ghi nhớ đăng nhập"
+            android:textColor="#000000" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_login_submit"
             android:layout_width="match_parent"
@@ -116,6 +126,30 @@
             android:textAllCaps="false"
             android:textColor="@color/text_color_primary"
             android:textSize="18sp" />
+
+        <LinearLayout
+            android:id="@+id/ll_go_to_forgot_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Bạn quên mật khẩu? " />
+
+            <TextView
+                android:id="@+id/tv_forgot_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quên mật khẩu"
+                android:textStyle="bold"
+                android:textColor="@android:color/black" />
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:id="@+id/ll_go_to_register"
